# khkt-2026

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  ok.bat  pyproject.toml
app/: __init__.py  config.py  main.py  requirements.txt  rules.yaml  utils.py
app/api/: __init__.py  weather.py
app/hq/: __init__.py  hq_calibration.py  hq_model.py
app/ingest/: __init__.py  http_server.py  mqtt_client.py  telemetry_schema.py
app/model/: __init__.py  service.py
app/qc/: __init__.py  rules.py
app/sensors/: __init__.py  buffer.py
app/storage/: __init__.py  db.py  logging_io.py
app/ui/: __init__.py  dashboard.py  devices.py  forecast_detail.py  history_report.py  hq_calib_dialog.py  main_window.py  settings.py  theme.qss  widgets.py
app/workers/: __init__.py  alerting.py  scheduler.py
firmware/cmau_flood_node_caseA/: cmau_flood_node_caseA.ino
flood_alert_ml/: README.md  __init__.py  aggregator.py  app.py  cli.py  config.py  env.py  features.py  firebase_auth.py  geocode.py  geolocate.py  logging_io.py  model.py  model_horizons.py  requirements.txt  utils.py  workers.py
flood_alert_ml/sources/: base.py  firebase_station.py  open_meteo.py  open_weather.py  simulator.py
flood_alert_ml/tests/: test_aggregator.py  test_features.py  test_model.py
flood_alert_ml/ui/: main_window.py  styles.qss  widgets.py
tests/: test_hq.py  test_qc.py  test_schema.py
