[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmau-flood-alert-case-a"
version = "0.1.0"
description = "Cảnh báo sớm ngập úng – Case A (H–Q)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "CMau Team" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
